# KaggleCompetitions

./: LICENSE  README.md
MusicRecommendation/: AnalyseFromKaggle.ipynb  DataMergeAndConvert.ipynb  DataReorder.ipynb  GBM-0.68101.ipynb  GBM-0.68527.ipynb  GBM-Feature-0.69659.ipynb  GBM-Feature-0.69982.ipynb  GBM-Feature-0.70114.ipynb  GBM-Feature-0.70159.ipynb  GBM-Feature.ipynb  GBM-Feature.py  GBM.ipynb  IHaveToSayThis.ipynb  PytorchFM-Extract.ipynb  PytorchFM.ipynb  SaveHDF5.ipynb  Terminal-0.70842.ipynb  Terminal.ipynb  TestHDFTables.ipynb  TestXgboost.ipynb  Xgboost.ipynb
MusicRecommendation/.ipynb_checkpoints/: DataExploration-checkpoint.ipynb  GBM-Feature-0.69154-checkpoint.ipynb  GBM-Feature-try-checkpoint.ipynb  GBM-First-0.678-checkpoint.ipynb  GBM-checkpoint.ipynb  IHaveToSayThis-checkpoint.ipynb  Pytorch-Template-checkpoint.ipynb  SaveHDF5-checkpoint.ipynb  Terminal-0.70814-local0.72016-checkpoint.ipynb  Terminal-addreg_0.722396_online0.70784-checkpoint.ipynb  TestXgboost-checkpoint.ipynb
ProductImageClassification/: CvtTFImage.ipynb  DenseTrainAndVal.ipynb  Ensemble.ipynb  HierarchyClassificationPrepare.ipynb  InceptionTrainAndVal.ipynb  InceptionTrainAndVal160.ipynb  InceptionTrainAndVal160WithAux-NewStart.ipynb  InceptionTrainAndVal160WithAux.ipynb  Pytorch-Resnet-Copy1.ipynb  Pytorch-Resnet-FocalLoss.ipynb  Pytorch-Resnet-Test.ipynb  Pytorch-Resnet.ipynb  ReadFromBson.ipynb  ResnetTestAndSaveSparse.ipynb  RunTestAndEnsemble.ipynb  RunTestAndSaveSparse.ipynb  SelectHardExample.ipynb  TFInception-LastTry-UsePytorchPreprocess.ipynb  TFResnet101-HierarchyClassification.ipynb  TFResnet101-NewStart.ipynb  TFResnet101-Normal.ipynb  TFResnet101-VGGPreprocess.ipynb  TFResnet101.ipynb  TFResnet50.ipynb  TFResnet50_NoSumAgradient.ipynb  TempTest.ipynb  TerminalEnsemble.ipynb  TorchResnet.ipynb  TrySplitLocalTest.ipynb  cdscount_preprocessing.py  inception_v3_Last.py  list.csv  torch_resnet.py
ProductImageClassification/.ipynb_checkpoints/: CategoryAnalyse-checkpoint.ipynb  CvtIntoRaw-checkpoint.ipynb  FocalLossTest-checkpoint.ipynb  Inception160RunTestAndSaveSparse-checkpoint.ipynb  Inception160RunTestAndSaveSparseWithAug-checkpoint.ipynb  InceptionTrainAndVal160-checkpoint.ipynb  InceptionTrainAndVal160WithAux-Normal-checkpoint.ipynb  Pytorch-Resnet-Test-checkpoint.ipynb  Pytorch-Resnet-Val-checkpoint.ipynb  Pytorch-Template-checkpoint.ipynb  ReadFromBson-checkpoint.ipynb  RunTestAndSaveSparse-checkpoint.ipynb  SelectHardExample-checkpoint.ipynb  TFExampleInput-checkpoint.ipynb  TFInception-HierarchyClassification-checkpoint.ipynb  TFInception-LastTry-checkpoint.ipynb  TFResnet101-HierarchyClassification-TestAndSaveSparse-checkpoint.ipynb  TFResnet101-HierarchyClassification-checkpoint.ipynb  TFResnet101-Normal-checkpoint.ipynb  (+8 more)
Utilities/segment_median/cpp/: CMakeLists.txt  segment_median_op.cc  segment_median_op.cu  segment_median_op.h
(+15 files in other folders)
